--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,4 @@
+/* Google Font Outfit  */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 @import "tailwindcss";
